--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <meta name="description"
-        content="Room planner game description.">
+        content="Isometric Rooms is a game about the beauty of simple forms and the harmony of space.">
 
   <meta name="keywords"
         content="room, planner">
 
-  <meta name="application-name" content="Room Planner">
+  <meta name="application-name" content="Isometric Rooms">
 
   <link rel="canonical" href="https://room-planner.com/">
 
   <!-- Open Graph for social sharing -->
   <meta property="og:type"        content="website">
-  <meta property="og:title"       content="Room Planner">
-  <meta property="og:description" content="Dive into real-time shading with interactive tasks, tutorials, and live demos. Master GLSL, HLSL and GPU programming.">
+  <meta property="og:title"       content="Isometric Rooms">
+  <meta property="og:description" content="Isometric Rooms is a game about the beauty of simple forms and the harmony of space.">
   <meta property="og:url"         content="https://room-planner.com/">
   <meta property="og:image"       content="https://room-planner.com/assets/og-image.png">
 
   <!-- Twitter Card -->
   <meta name="twitter:card"        content="summary_large_image">
-  <meta name="twitter:title"       content="Room Planner">
-  <meta name="twitter:description" content="Room planner game description.">
+  <meta name="twitter:title"       content="Isometric Rooms">
+  <meta name="twitter:description" content="Isometric Rooms is a game about the beauty of simple forms and the harmony of space.">
   <meta name="twitter:image"       content="https://room-planner.com/assets/twitter-card.png">
 
   <meta name="msapplication-config" content="/browserconfig.xml"/>
@@ -33,7 +33,7 @@
   <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#4f6af4">
 
-  <title>Room Planner</title>
+  <title>Isometric Rooms</title>
   <base href="/">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
